@@ -7,7 +7,7 @@ Contents of the .eh_frame section:
 00000000 00000010 00000000 CIE
   Version:               1
   Augmentation:          "zR"
-  Code alignment factor: 4
+  Code alignment factor: [24]
   Data alignment factor: -4
   Return address column: 65
   Augmentation data:     1b
